--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body {
     color:black;
     text-align: left;
-    font-family: Cambria;
+    font-family: Helvetica;
     font-size: 16px;
     margin: 0;
     padding: 0;
